cierra/grammar/parser/.antlr/TaurusParser.java
// Generated from /Users/lightquantum/Projects/cierra/grammar/parser/Taurus.g4 by ANTLR 4.9.2

#![allow(unused_parens)]

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TaurusParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VOID=1, STRUCT=2, LPAR=3, RPAR=4, LBRACE=5, RBRACE=6, COMMA=7, SEMICOLON=8, 
		LBRACKET=9, RBRACKET=10, PERIOD=11, INT=12, FLOAT=13, BOOL=14, IF=15, 
		ELSE=16, BREAK=17, CONTINUE=18, RETURN=19, WHILE=20, DO=21, FOR=22, ASSIGN=23, 
		EQ=24, NE=25, LE=26, LT=27, GE=28, GT=29, ADD=30, MINUS=31, MUL=32, DIV=33, 
		NOT=34, MOD=35, AND=36, OR=37, EXPR_TRUE=38, EXPR_FALSE=39, ANNO_TRUE=40, 
		ANNO_FALSE=41, RESULT=42, LENGTH=43, OLD=44, WITH=45, IMPLY=46, EQUIV=47, 
		XOR=48, FORALL=49, EXISTS=50, BOOLEAN=51, INTEGER=52, REAL=53, REQUIRES=54, 
		DECREASES=55, ENSURES=56, ASSERT=57, LOOP=58, INVARIANT=59, VARIANT=60, 
		PREDICATE=61, VALID=62, APOSTROPHE=63, INT_CONSTANT=64, FLOAT_CONSTANT=65, 
		IDENT=66, COMMENT=67, LINE_COMMENT=68, ANNOT_START=69, ANNOT_END=70, LINE_ANNOT_START=71, 
		AT=72, LINEEND=73, WS=74;
	public static final int
		RULE_main = 0, RULE_def = 1, RULE_declStmt = 2, RULE_funcDef = 3, RULE_structDef = 4, 
		RULE_localVar = 5, RULE_paraVar = 6, RULE_retVar = 7, RULE_retTy = 8, 
		RULE_atomicType = 9, RULE_logicParaVar = 10, RULE_logicAtomicType = 11, 
		RULE_stmt = 12, RULE_forInit = 13, RULE_forIter = 14, RULE_assign = 15, 
		RULE_decl = 16, RULE_expr = 17, RULE_logicConstant = 18, RULE_arithTerm = 19, 
		RULE_term = 20, RULE_pred = 21, RULE_arithOp = 22, RULE_addOp = 23, RULE_mulOp = 24, 
		RULE_cmpOp = 25, RULE_eqOp = 26, RULE_ordOp = 27, RULE_unaryOp = 28, RULE_quantifier = 29, 
		RULE_binder = 30, RULE_funcContract = 31, RULE_requiresClause = 32, RULE_decreasesClause = 33, 
		RULE_ensuresClause = 34, RULE_assertion = 35, RULE_loopAnnot = 36, RULE_predDefs = 37, 
		RULE_predDef = 38, RULE_constant = 39;
	private static String[] makeRuleNames() {
		return new String[] {
			"main", "def", "declStmt", "funcDef", "structDef", "localVar", "paraVar", 
			"retVar", "retTy", "atomicType", "logicParaVar", "logicAtomicType", "stmt", 
			"forInit", "forIter", "assign", "decl", "expr", "logicConstant", "arithTerm", 
			"term", "pred", "arithOp", "addOp", "mulOp", "cmpOp", "eqOp", "ordOp", 
			"unaryOp", "quantifier", "binder", "funcContract", "requiresClause", 
			"decreasesClause", "ensuresClause", "assertion", "loopAnnot", "predDefs", 
			"predDef", "constant"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'void'", "'struct'", "'('", "')'", "'{'", "'}'", "','", "';'", 
			"'['", "']'", "'.'", "'int'", "'float'", "'bool'", "'if'", "'else'", 
			"'break'", "'continue'", "'return'", "'while'", "'do'", "'for'", "'='", 
			"'=='", "'!='", "'<='", "'<'", "'>='", "'>'", "'+'", "'-'", "'*'", "'/'", 
			"'!'", "'%'", "'&&'", "'||'", "'true'", "'false'", "'\\true'", "'\\false'", 
			"'\\result'", "'\\length'", "'\\old'", "'\\with'", "'==>'", "'<==>'", 
			"'^^'", "'\\forall'", "'\\exists'", "'boolean'", "'integer'", "'real'", 
			"'requires'", "'decreases'", "'ensures'", "'assert'", "'loop'", "'invariant'", 
			"'variant'", "'predicate'", "'\\valid'", "'..'", null, null, null, null, 
			null, "'/*@'", "'*/'", "'//@'", "'@'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "VOID", "STRUCT", "LPAR", "RPAR", "LBRACE", "RBRACE", "COMMA", 
			"SEMICOLON", "LBRACKET", "RBRACKET", "PERIOD", "INT", "FLOAT", "BOOL", 
			"IF", "ELSE", "BREAK", "CONTINUE", "RETURN", "WHILE", "DO", "FOR", "ASSIGN", 
			"EQ", "NE", "LE", "LT", "GE", "GT", "ADD", "MINUS", "MUL", "DIV", "NOT", 
			"MOD", "AND", "OR", "EXPR_TRUE", "EXPR_FALSE", "ANNO_TRUE", "ANNO_FALSE", 
			"RESULT", "LENGTH", "OLD", "WITH", "IMPLY", "EQUIV", "XOR", "FORALL", 
			"EXISTS", "BOOLEAN", "INTEGER", "REAL", "REQUIRES", "DECREASES", "ENSURES", 
			"ASSERT", "LOOP", "INVARIANT", "VARIANT", "PREDICATE", "VALID", "APOSTROPHE", 
			"INT_CONSTANT", "FLOAT_CONSTANT", "IDENT", "COMMENT", "LINE_COMMENT", 
			"ANNOT_START", "ANNOT_END", "LINE_ANNOT_START", "AT", "LINEEND", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Taurus.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TaurusParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class MainContext extends ParserRuleContext {
		public DefContext defs;
		public TerminalNode EOF() { return getToken(TaurusParser.EOF, 0); }
		public List<DefContext> def() {
			return getRuleContexts(DefContext.class);
		}
		public DefContext def(int i) {
			return getRuleContext(DefContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STRUCT || _la==ANNOT_START || _la==LINE_ANNOT_START) {
				{
				{
				setState(80);
				((MainContext)_localctx).defs = def();
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(86);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefContext extends ParserRuleContext {
		public DefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def; }
	 
		public DefContext() { }
		public void copyFrom(DefContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FunctionContext extends DefContext {
		public FuncDefContext funcDef() {
			return getRuleContext(FuncDefContext.class,0);
		}
		public FunctionContext(DefContext ctx) { copyFrom(ctx); }
	}
	public static class StructureContext extends DefContext {
		public StructDefContext structDef() {
			return getRuleContext(StructDefContext.class,0);
		}
		public StructureContext(DefContext ctx) { copyFrom(ctx); }
	}
	public static class PredicateContext extends DefContext {
		public PredDefsContext predDefs() {
			return getRuleContext(PredDefsContext.class,0);
		}
		public PredicateContext(DefContext ctx) { copyFrom(ctx); }
	}

	public final DefContext def() throws RecognitionException {
		DefContext _localctx = new DefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_def);
		try {
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new FunctionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				funcDef();
				}
				break;
			case 2:
				_localctx = new StructureContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				structDef();
				}
				break;
			case 3:
				_localctx = new PredicateContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(90);
				predDefs();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclStmtContext extends ParserRuleContext {
		public DeclStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declStmt; }
	 
		public DeclStmtContext() { }
		public void copyFrom(DeclStmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StatementContext extends DeclStmtContext {
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public StatementContext(DeclStmtContext ctx) { copyFrom(ctx); }
	}
	public static class DeclarationContext extends DeclStmtContext {
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public DeclarationContext(DeclStmtContext ctx) { copyFrom(ctx); }
	}

	public final DeclStmtContext declStmt() throws RecognitionException {
		DeclStmtContext _localctx = new DeclStmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declStmt);
		try {
			setState(95);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRUCT:
			case INT:
			case FLOAT:
				_localctx = new DeclarationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				decl();
				}
				break;
			case LPAR:
			case LBRACE:
			case SEMICOLON:
			case IF:
			case BREAK:
			case CONTINUE:
			case RETURN:
			case MINUS:
			case NOT:
			case EXPR_TRUE:
			case EXPR_FALSE:
			case INT_CONSTANT:
			case FLOAT_CONSTANT:
			case IDENT:
			case ANNOT_START:
			case LINE_ANNOT_START:
				_localctx = new StatementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncDefContext extends ParserRuleContext {
		public FuncContractContext funcContract() {
			return getRuleContext(FuncContractContext.class,0);
		}
		public RetVarContext retVar() {
			return getRuleContext(RetVarContext.class,0);
		}
		public TerminalNode LPAR() { return getToken(TaurusParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(TaurusParser.RPAR, 0); }
		public TerminalNode LBRACE() { return getToken(TaurusParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(TaurusParser.RBRACE, 0); }
		public List<ParaVarContext> paraVar() {
			return getRuleContexts(ParaVarContext.class);
		}
		public ParaVarContext paraVar(int i) {
			return getRuleContext(ParaVarContext.class,i);
		}
		public List<DeclStmtContext> declStmt() {
			return getRuleContexts(DeclStmtContext.class);
		}
		public DeclStmtContext declStmt(int i) {
			return getRuleContext(DeclStmtContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(TaurusParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(TaurusParser.COMMA, i);
		}
		public FuncDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDef; }
	}

	public final FuncDefContext funcDef() throws RecognitionException {
		FuncDefContext _localctx = new FuncDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funcDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			funcContract();
			setState(98);
			retVar();
			setState(99);
			match(LPAR);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRUCT) | (1L << INT) | (1L << FLOAT))) != 0)) {
				{
				setState(100);
				paraVar();
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(101);
					match(COMMA);
					setState(102);
					paraVar();
					}
					}
					setState(107);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(110);
			match(RPAR);
			setState(111);
			match(LBRACE);
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRUCT) | (1L << LPAR) | (1L << LBRACE) | (1L << SEMICOLON) | (1L << INT) | (1L << FLOAT) | (1L << IF) | (1L << BREAK) | (1L << CONTINUE) | (1L << RETURN) | (1L << MINUS) | (1L << NOT) | (1L << EXPR_TRUE) | (1L << EXPR_FALSE))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (INT_CONSTANT - 64)) | (1L << (FLOAT_CONSTANT - 64)) | (1L << (IDENT - 64)) | (1L << (ANNOT_START - 64)) | (1L << (LINE_ANNOT_START - 64)))) != 0)) {
				{
				{
				setState(112);
				declStmt();
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructDefContext extends ParserRuleContext {
		public TerminalNode STRUCT() { return getToken(TaurusParser.STRUCT, 0); }
		public TerminalNode IDENT() { return getToken(TaurusParser.IDENT, 0); }
		public TerminalNode LBRACE() { return getToken(TaurusParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(TaurusParser.RBRACE, 0); }
		public List<TerminalNode> SEMICOLON() { return getTokens(TaurusParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(TaurusParser.SEMICOLON, i);
		}
		public List<ParaVarContext> paraVar() {
			return getRuleContexts(ParaVarContext.class);
		}
		public ParaVarContext paraVar(int i) {
			return getRuleContext(ParaVarContext.class,i);
		}
		public StructDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structDef; }
	}

	public final StructDefContext structDef() throws RecognitionException {
		StructDefContext _localctx = new StructDefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_structDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(STRUCT);
			setState(121);
			match(IDENT);
			setState(122);
			match(LBRACE);
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRUCT) | (1L << INT) | (1L << FLOAT))) != 0)) {
				{
				{
				setState(123);
				paraVar();
				setState(124);
				match(SEMICOLON);
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(131);
			match(RBRACE);
			setState(132);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocalVarContext extends ParserRuleContext {
		public LocalVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_localVar; }
	 
		public LocalVarContext() { }
		public void copyFrom(LocalVarContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AtomLocalVarContext extends LocalVarContext {
		public AtomicTypeContext atomicType() {
			return getRuleContext(AtomicTypeContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(TaurusParser.IDENT, 0); }
		public AtomLocalVarContext(LocalVarContext ctx) { copyFrom(ctx); }
	}
	public static class StructLocalVarContext extends LocalVarContext {
		public TerminalNode STRUCT() { return getToken(TaurusParser.STRUCT, 0); }
		public List<TerminalNode> IDENT() { return getTokens(TaurusParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(TaurusParser.IDENT, i);
		}
		public StructLocalVarContext(LocalVarContext ctx) { copyFrom(ctx); }
	}
	public static class ArrLocalVarContext extends LocalVarContext {
		public AtomicTypeContext atomicType() {
			return getRuleContext(AtomicTypeContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(TaurusParser.IDENT, 0); }
		public TerminalNode LBRACKET() { return getToken(TaurusParser.LBRACKET, 0); }
		public TerminalNode INT_CONSTANT() { return getToken(TaurusParser.INT_CONSTANT, 0); }
		public TerminalNode RBRACKET() { return getToken(TaurusParser.RBRACKET, 0); }
		public ArrLocalVarContext(LocalVarContext ctx) { copyFrom(ctx); }
	}

	public final LocalVarContext localVar() throws RecognitionException {
		LocalVarContext _localctx = new LocalVarContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_localVar);
		try {
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new AtomLocalVarContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(134);
				atomicType();
				setState(135);
				match(IDENT);
				}
				break;
			case 2:
				_localctx = new StructLocalVarContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				match(STRUCT);
				setState(138);
				match(IDENT);
				setState(139);
				match(IDENT);
				}
				break;
			case 3:
				_localctx = new ArrLocalVarContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(140);
				atomicType();
				setState(141);
				match(IDENT);
				setState(142);
				match(LBRACKET);
				setState(143);
				match(INT_CONSTANT);
				setState(144);
				match(RBRACKET);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParaVarContext extends ParserRuleContext {
		public ParaVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paraVar; }
	 
		public ParaVarContext() { }
		public void copyFrom(ParaVarContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AtomParaVarContext extends ParaVarContext {
		public AtomicTypeContext atomicType() {
			return getRuleContext(AtomicTypeContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(TaurusParser.IDENT, 0); }
		public AtomParaVarContext(ParaVarContext ctx) { copyFrom(ctx); }
	}
	public static class ArrParaVarContext extends ParaVarContext {
		public AtomicTypeContext atomicType() {
			return getRuleContext(AtomicTypeContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(TaurusParser.IDENT, 0); }
		public TerminalNode LBRACKET() { return getToken(TaurusParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(TaurusParser.RBRACKET, 0); }
		public ArrParaVarContext(ParaVarContext ctx) { copyFrom(ctx); }
	}
	public static class StructParaVarContext extends ParaVarContext {
		public TerminalNode STRUCT() { return getToken(TaurusParser.STRUCT, 0); }
		public List<TerminalNode> IDENT() { return getTokens(TaurusParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(TaurusParser.IDENT, i);
		}
		public StructParaVarContext(ParaVarContext ctx) { copyFrom(ctx); }
	}
